--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-dependency-injection": "^1.4.2",
     "aurelia-http-client": "^1.3.1",
+    "aurelia-polyfills": "^1.3.4",
     "bluebird": "^3.5.2",
     "fullcalendar": "^3.10.0",
     "jquery": "^3.4.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.24.0",
     "requirejs": "^2.3.6",
     "summernote": "^0.8.11",
-    "text": "github:requirejs/text#latest"
+    "text": "github:requirejs/text#latest",
+    "utils": "^0.3.1"
   },
   "peerDependencies": {},
   "devDependencies": {
