--- a/server2/package.json
+++ b/server2/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.6",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.4"
   }
 }
