--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "favicon": "^0.0.2",
     "jsonwebtoken": "^8.2.1",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.0.15",
